--- a/package.json
+++ b/package.json
@@ -4,20 +4,35 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev-port": "next dev -p 3340",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
+    "@tanstack/react-query": "^5.4.3",
+    "axios": "^1.6.0",
+    "classnames": "^2.3.2",
+    "cookie": "^0.5.0",
+    "cookie-cutter": "^0.2.0",
+    "cookies-next": "^4.0.0",
+    "dayjs": "^1.11.10",
+    "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
+    "next": "14.0.1",
+    "next-client-cookies": "^1.0.6",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "eslint-config-next": "14.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
