--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev-port": "next dev -p 3340",
+    "dev-alter": "next dev -p 3340",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.4.3",
+    "@tiptap/core": "^2.1.12",
+    "@tiptap/extension-placeholder": "^2.1.12",
+    "@tiptap/extension-underline": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "axios": "^1.6.0",
     "classnames": "^2.3.2",
     "cookie": "^0.5.0",
