--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
