--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.0",
     "classnames": "^2.3.2",
     "cookie": "^0.5.0",
