--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookies-next": "^4.0.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
+    "html-parse-stringify2": "^2.0.1",
     "lodash": "^4.17.21",
     "next": "14.0.1",
     "next-client-cookies": "^1.0.6",
