--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_BACKEND_URL=https://api.rifqiagniamubarok.com/api/v1
-BACKEND_URL=https://api.rifqiagniamubarok.com/api/v1
+NEXT_PUBLIC_BACKEND_URL=http://localhost:4440/api/v1/
