--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "dev-alter": "next dev -p 3340",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,6 +14,8 @@
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.4.3",
     "@tiptap/core": "^2.1.12",
+    "@tiptap/extension-code-block-lowlight": "^2.1.12",
+    "@tiptap/extension-image": "^2.1.12",
     "@tiptap/extension-placeholder": "^2.1.12",
     "@tiptap/extension-underline": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
@@ -27,8 +29,10 @@
     "cookies-next": "^4.0.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
+    "highlight.js": "^11.9.0",
     "html-parse-stringify2": "^2.0.1",
     "lodash": "^4.17.21",
+    "lowlight": "^3.1.0",
     "next": "14.0.1",
     "next-client-cookies": "^1.0.6",
     "nextjs-progressbar": "^0.0.16",
