--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_BACKEND_URL=https://api.rifqiagniamubarok.com/api/v1/
+SERVER_BACKEND_URL=http://api.rifqiagniamubarok.com/api/v1/
 NEXT_PUBLIC_PORT=3000
